<resources>
    <string name="app_name">HikeTogether</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="skip">Skip</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="create_account">Create Account</string>
    <string name="verify_password">Verify Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bluebackground">blueBackground</string>
    <string name="create_your_own_account">Create Your Own Account</string>
    <string name="enter_your_account_info_to_begin">Enter your account info to begin</string>
    <string name="search_bar">Search Bar</string>
    <string name="home_button">Home Button</string>
    <string name="searchbutton">SearchButton</string>
    <string name="map_button">Map Button</string>
    <string name="settings_button">Settings Button</string>
    <string name="forgot_username">Forgot Username</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="new_password">New Password</string>
    <string name="verify_new_password">Verify New Password</string>
    <string name="recover_username">Recover Username</string>
    <string name="settings">Settings</string>
    <string name="change_background_style">Change Background Style</string>
    <string name="profile_image">Profile Image</string>
    <string name="change_trail_search_distance">Change Trail Search Distance</string>
    <string name="user_e_mail">User E-Mail</string>
    <string name="e_mail">E-Mail</string>
    <string name="user_username">User Username</string>
    <string name="change_background">Change Background</string>
    <string name="change_password">Change Password</string>
    <string name="edit">Edit</string>
    <string name="users_first_name">Users First Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="users_last_name">Users Last Name</string>
    <string name="profile_picture">Profile Picture</string>
</resources>
